# loopforge

./: .env.example  .gitignore  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  design-system.md  mvp-loops.md  product.md
src/ai_agent_loop/: __init__.py  agent.py  approval.py  autonomous.py  cli.py  critique.py  events.py  evidence.py  evidence_bundle.py  execution_adapter.py  execution_gate.py  goal.py  ledger.py  loop.py  multi_agent.py  policy.py  project.py  provider.py  reviewer_decision.py  reviewer_handoff.py  risk.py  settings.py  store.py  workbench.py
src/ai_agent_loop/tools/: __init__.py  files.py  git.py  shell.py
tests/: test_approval.py  test_autonomous.py  test_cli.py  test_critique.py  test_evidence.py  test_evidence_bundle.py  test_execution_adapter.py  test_execution_gate.py  test_git_tools.py  test_ledger.py  test_loop.py  test_multi_agent.py  test_policy.py  test_provider.py  test_reviewer_decision.py  test_reviewer_handoff.py  test_tools.py  test_workbench.py
